# opp

./: Cargo.toml  README.md  SPEC.md  WHY.md
.github/workflows/: ci.yml
crates/opp-cli/: Cargo.toml
crates/opp-cli/src/: main.rs
crates/opp-core/: Cargo.toml
crates/opp-core/src/: canonicalize.rs  error.rs  lib.rs  parse.rs  sign.rs  subject.rs  validate.rs  verify.rs
crates/opp-core/tests/: integration_tests.rs
crates/opp-viewer/: Cargo.toml
crates/opp-viewer/src/: main.rs
crates/opp-viewer/tests/: cli.rs
docs/: PUBLISH-YOUR-FIRST-PRESENCE.md
docs/superpowers/plans/: 2026-07-19-rfc8785-numeric-canonicalization.md
docs/superpowers/specs/: 2026-07-19-rfc8785-numeric-canonicalization-design.md
vectors/: README.md  rfc8785-number-serialization.json
vectors/invalid/: duplicate-nested.json  duplicate-top-level.json  missing-type.json  missing-version.json  unsupported-version.json  wrong-type.json
vectors/valid/: signed-document.json  unsigned-document.json
