[package]
name = "opp-cli"
version = "0.1.0"
edition = "2021"
description = "Open Presence Protocol 0.1 CLI"
license = "Apache 2.0"

[[bin]]
name = "opp"
path = "src/main.rs"

[dependencies]
opp-core = { path = "../opp-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
time = { version = "0.3", features = ["parsing", "formatting"] }
