[package]
name = "opp-core"
version = "0.1.0"
edition = "2021"
description = "Open Presence Protocol 0.1 reference implementation"
license = "Apache 2.0"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["parsing", "formatting"] }
url = "2"

[dev-dependencies]
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
