[package]
name = "opp-viewer"
version = "0.1.0"
edition = "2021"
description = "Human-readable OPP presence document viewer"
license = "Apache 2.0"

[[bin]]
name = "opp-viewer"
path = "src/main.rs"

[dependencies]
opp-core = { path = "../opp-core" }
time = { version = "0.3", features = ["parsing", "formatting"] }

[dev-dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde_json = "1"
